Fix content not centered on large screens.

--- a/src/styles/mypleasure.scss
+++ b/src/styles/mypleasure.scss
@@ -84,6 +84,10 @@ html, body {
     width: 100%;
     height: 100%;
 
+    .row {
+      max-width: none;
+    }
+
     h1 {
       @include font-montserrat();
       @include font-size(50px);
